# Nighthawk

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  model_load_from_saved.ipynb  pyproject.toml  requirements.txt  run_nighthawk.py  run_reconstructed_model.py
instructions/feedback/: model_feedback.md  model_feedback_audacity.md  model_feedback_raven.md
nighthawk/: __init__.py  compare_calibrations.py  compare_postprocessor_speeds.py  compile_and_verify_feedback.py  create_probability_calibration_file.py  detector.py  exercise_postprocessor.py  model.py  model_load_from_saved.ipynb  nighthawk.py  nighthawk_new.py  numpy_postprocessor.py  pandas_postprocessor.py  postprocessor.py  prep_feedback.py  probability_calibration_utils.py  run_nighthawk.py  run_nighthawk_new.py  run_reconstructed_model.py  test_calibrations.py  test_model_application.py
nighthawk/saved_model_with_preprocessing/: keras_metadata.pb
nighthawk/saved_model_with_preprocessing/variables/: variables.index
nighthawk/taxonomy/: families_select_v5.txt  species_select_v5.txt  taxonomy_version.txt
nighthawk/test_config/: probability_calibrations.csv  test_config.json  test_config_edited_for_AP>0.7.json
nighthawk/test_config/test_set_performance/: taxon_summary_family.csv  taxon_summary_group.csv  taxon_summary_order.csv  taxon_summary_species.csv
saved_model_with_preprocessing/: keras_metadata.pb
taxonomy/: groups_ebird_codes.csv  groups_select_v5.txt  orders_select_v5.txt
test_inputs/: Feedback.txt  test3.yml  test_input.npy
